--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=
-    <title>Document</title>
+    <title>Instargram Clone</title>
   </head>
   <body>
     <div id="root"></div>
